Reduce number of caches for GitHub Actions

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -32,14 +32,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ./build/${{ matrix.board }}/${{ matrix.optimize }}/toolchain
-          key: ${{ matrix.board }}-${{ matrix.optimize }}-toolchain
+          key: ${{ matrix.board }}-toolchain
 
       - name: Cache Dependencies
         id: cache-deps
         uses: actions/cache@v4
         with:
           path: ./build/${{ matrix.board }}/${{ matrix.optimize }}/_deps
-          key: ${{ matrix.board }}-${{ matrix.optimize }}-deps
+          key: ${{ matrix.board }}-deps
 
       - name: Build
         run: zig build -Dboard=${{ matrix.board }} -Doptimize=${{ matrix.optimize }} -Dbuild_dir=./build/${{ matrix.board }}/${{ matrix.optimize }}
